# chist

./: .gitignore  LICENSE  README.md  chist  pyproject.toml
chistlib/: archive.py  banner.py  cli.py  db.py  distill.py  export.py  indexer.py  list_show.py  parser.py  paths.py  resume.py  search.py
commands/: history-export.md  history-resume.md  history-search.md
docs/plans/: 2026-05-06-claude-history.md
docs/specs/: 2026-05-06-design.md
skills/claude-history/: SKILL.md
tests/: fixtures.py  test_archive.py  test_banner.py  test_cli_index.py  test_db.py  test_distill.py  test_export.py  test_indexer.py  test_list_show.py  test_parser.py  test_resume.py  test_search.py
